[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/floob.png" type="Texture" id=1]
[ext_resource path="res://Floob.gd" type="Script" id=2]
[ext_resource path="res://assets/wing.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 50.4554

[node name="Floob" type="Area2D"]
z_index = 3
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1.12245, 12.9083 )
shape = SubResource( 1 )

[node name="LeftWing" type="Sprite" parent="."]
position = Vector2( -47.596, -9.901 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 3 )

[node name="RightWing" type="Sprite" parent="."]
position = Vector2( 47.596, -9.901 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 3 )
flip_h = true

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.22, 0.22 )
texture = ExtResource( 1 )

[connection signal="area_shape_entered" from="." to="." method="_on_Floob_area_shape_entered"]
[connection signal="body_entered" from="." to="." method="_on_Floob_body_entered"]
